--- a/efiboot/loader/entries/02-archiso-x86_64-speech-linux.conf
+++ b/efiboot/loader/entries/02-archiso-x86_64-speech-linux.conf
@@ -1,4 +1,4 @@
-title    Helwan Linux install medium (x86_64, UEFI) with speech
+title    Helwan install medium (x86_64, UEFI) with speech
 sort-key 02
 linux    /%INSTALL_DIR%/boot/x86_64/vmlinuz-linux
 initrd   /%INSTALL_DIR%/boot/x86_64/initramfs-linux.img
