--- a/syslinux/archiso_pxe-linux.cfg
+++ b/syslinux/archiso_pxe-linux.cfg
@@ -1,7 +1,7 @@
 LABEL arch64_nbd
 TEXT HELP
-Boot the Arch Linux install medium using NBD.
-It allows you to install Arch Linux or perform system maintenance.
+Boot Helwan install medium using NBD.
+It allows you to install Helwan or perform system maintenance.
 ENDTEXT
 MENU LABEL Helwan install medium (x86_64, NBD)
 LINUX ::/%INSTALL_DIR%/boot/x86_64/vmlinuz-linux
