--- a/syslinux/archiso_pxe-linux.cfg
+++ b/syslinux/archiso_pxe-linux.cfg
@@ -11,8 +11,8 @@ SYSAPPEND 3
 
 LABEL arch64_nfs
 TEXT HELP
-Boot the Arch Linux live medium using NFS.
-It allows you to install Arch Linux or perform system maintenance.
+Boot the Helwan live medium using NFS.
+It allows you to install Helwan or perform system maintenance.
 ENDTEXT
 MENU LABEL Helwan install medium (x86_64, NFS)
 LINUX ::/%INSTALL_DIR%/boot/x86_64/vmlinuz-linux
@@ -22,8 +22,8 @@ SYSAPPEND 3
 
 LABEL arch64_http
 TEXT HELP
-Boot the Arch Linux live medium using HTTP.
-It allows you to install Arch Linux or perform system maintenance.
+Boot the Helwan live medium using HTTP.
+It allows you to install Helwan or perform system maintenance.
 ENDTEXT
 MENU LABEL Helwan install medium (x86_64, HTTP)
 LINUX ::/%INSTALL_DIR%/boot/x86_64/vmlinuz-linux
