--- a/syslinux/archiso_sys-linux.cfg
+++ b/syslinux/archiso_sys-linux.cfg
@@ -1,7 +1,7 @@
 LABEL arch64
 TEXT HELP
-Boot the Arch Linux install medium on BIOS.
-It allows you to install Arch Linux or perform system maintenance.
+Boot the Helwan install medium on BIOS.
+It allows you to install Helwan or perform system maintenance.
 ENDTEXT
 MENU LABEL Helwan install medium (x86_64, BIOS)
 LINUX /%INSTALL_DIR%/boot/x86_64/vmlinuz-linux
