--- a/grub/grub.cfg
+++ b/grub/grub.cfg
@@ -33,7 +33,7 @@ if [ -z "${ARCHISO_UUID}" ]; then
 fi
 
 # Set default menu entry
-default=helwan
+default=archlinux
 timeout=15
 timeout_style=menu
 
@@ -42,7 +42,7 @@ play 600 988 1 1319 4
 
 # Menu entries
 
-menuentry "Arch Linux installer(x86_64, UEFI)" --class arch --class gnu-linux --class gnu --class os --id 'archlinux' {
+menuentry "Helwan installer(x86_64, UEFI)" --class arch --class gnu-linux --class gnu --class os --id 'archlinux' {
     set gfxpayload=keep
     linux /%INSTALL_DIR%/boot/x86_64/vmlinuz-linux archisobasedir=%INSTALL_DIR% archisodevice=UUID=${ARCHISO_UUID} cow_spacesize=5G nouveau.modeset=1 radeon.modeset=1 i915.modeset=1 copytoram=n nvme_load=yes
     initrd /%INSTALL_DIR%/boot/intel-ucode.img /%INSTALL_DIR%/boot/amd-ucode.img /%INSTALL_DIR%/boot/x86_64/initramfs-linux.img
